# adventofcode

./: .gitignore  LICENSE-header.txt  index.html  readme.adoc
c/: .autotools  .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  configure  configure.ac  readme.adoc
c++/: .cproject  .gitignore  .project  CMakeLists.txt  config.h.in  readme.adoc
c++/src/: day01.cc  day02.cc
c/data/: day05b.txt  day06a.txt  day06b.txt  day12.txt
c/day01/: Makefile  Makefile.am  Makefile.in  day01.c
c/day02/: Makefile.am  day02.c  day02.txt
c/day03/: .gitignore  Makefile.am  day03.c
c/day04/: .gitignore  Makefile.am  day04.cc
c/day05/: .gitignore  Makefile.am  day05.cc
c/day06/: Makefile.am  day06.cc
c/include/utils/: intcode.h  utils.h
c/src/: day00.cc  day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day07a.cc  day07b.cc  day08.cc  day09.cc  day10.cc  day11.cc  day12.cc  day12a.cc  day12b.cc  day13.cc  day14.cc  day15.cc  day16.cc  day17.cc  day18.cc  day19.cc  day20.cc  day21.cc  day22.cc  day23.cc
c/src/utils/: intcode.cc  utils.cc
data/: day01.txt  day03.txt  day04.txt  day07.txt  day07b.txt  day10-map.txt  day10-pipes.txt  day10g.txt  day10h.txt  day10i.txt  day13a.txt  day14b.txt  day15b.txt  day16b.txt  day16c.txt  day18.txt  day20b.txt  day22a.txt
go/: .gitignore  Makefile  glide.yaml  go.mod  readme.adoc
go/assets/: day09.txt  day17.txt  day17b.txt  day19b.txt  day20a-map.txt  day20a.txt  day20f.txt  day20g.txt  day21-tab.txt  day24b.txt
go/cmd/: root.go
go/cmd/aoc2017/: main.go
go/cmd/aoc2018/: main.go
go/cmd/aoc2020/: main.go
go/cmd/aoc2022/: main.go
go/cmd/day01/: day01.go
go/cmd/day02/: day02.go
go/cmd/day03/: day03.go
go/cmd/day04/: day04.go
go/cmd/day05/: day05.go
go/cmd/day06/: day06.go
go/cmd/day07/: day07.go
go/cmd/day08/: day08.go
go/cmd/day09/: day09.go
go/cmd/day10/: day10.go
go/cmd/day11/: day11.go
go/cmd/day12/: day12.go
go/cmd/day13/: day13.go
go/cmd/day14/: day14.go
go/cmd/day15/: day15.go
go/cmd/day16/: day16.go  opcodes.go
go/cmd/day17/: day17.go  day17_test.go
go/cmd/day18/: day18.go
go/cmd/day19/: day19.go  opcodes.go
go/cmd/day20/: day20.go  day20_test.go
go/cmd/day21/: day21.go
go/cmd/day22/: day22.go  day22_test.go
go/cmd/day23/: day23.go
go/cmd/day25/: day25.go
go/cmd/hello/: main.go
go/internal/app/aoc2020/: root.go
go/internal/app/aoc2022/: root.go
go/internal/pkg/day01/: day01.go
go/internal/pkg/day02/: day02.go
go/internal/pkg/day03/: day03.go
go/internal/pkg/day04/: day04.go
go/internal/pkg/day05/: day05.go
go/internal/pkg/day06/: day06.go
go/internal/pkg/day07/: day07.go
go/internal/pkg/day08/: day08.go
go/internal/pkg/day09/: day09.go
go/internal/pkg/day10/: day10.go
go/internal/pkg/day11/: day11.go
go/internal/pkg/day12/: day12.go
go/internal/pkg/day13/: day13.go
go/internal/pkg/day14/: day14.go
go/internal/pkg/day15/: day15.go
go/internal/pkg/day16/: day16.go
go/internal/pkg/day17/: day17.go
go/internal/pkg/day18/: day18.go
go/internal/pkg/day19/: day19.go
go/internal/pkg/day20/: day20.go  day20_test.go
go/internal/pkg/day21/: day21.go
go/internal/pkg/day22/: day22.go
go/internal/pkg/day23/: day23.go
go/internal/pkg/day24/: day24.go
go/internal/pkg/day25/: day25.go
java/: pom.xml
java/src/test/java/grgr/adventofcode2017/: Day01Test.java  Day02Test.java  Day03Test.java  Day04Test.java  Day05Test.java  Day06Test.java  Day07Test.java  Day08Test.java  Day09Test.java  Day10Test.java  Day11Test.java  Day12Test.java  Day13Test.java  Day14Test.java  Day15Test.java  Day16Test.java  Day17Test.java  Day18Test.java  Day19Test.java  Day20Test.java  Day21Test.java  Day22Test.java  Day23Test.java  Day24Test.java  Day25Test.java
java/src/test/java/grgr/adventofcode2020/: Day05Test.java
java/src/test/resources/: logback-test.xml  nodes.xml
rust/: Cargo.toml
rust/src/: aoc2022.rs  lib.rs
