AC_PREREQ([2.69])

AC_INIT([adventofcode2017], [1.0.0], [gr.grzybek@gmail.com])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_SILENT_RULES([yes])

# we can just `make CFLAGS="-g 0-O0" instead
#${CFLAGS=""}

AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
       Makefile
       day01/Makefile
       day02/Makefile
       day03/Makefile
       day04/Makefile
       day05/Makefile
])

AC_OUTPUT
